--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.messages.basename=messages
 
 ## Data Source
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=academicTest
-spring.datasource.password=academicTest
-spring.datasource.url=jdbc:mysql://jamestownacademico.cptcn1fslzvo.us-west-1.rds.amazonaws.com:3306/academicTest?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba_springboot?useSSL=false
 
 ## JPA
 spring.jpa.generate-ddl=false
