--- a/heystyles-usuarios-core/pom.xml
+++ b/heystyles-usuarios-core/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.9.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
