--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -31,6 +31,9 @@ client.seguridadUrlBase=http://localhost:9000/seguridad
 client.connectionTimeout=30000
 client.readTimeoutClientProperties=30000
 
+# Audit Config
+audit.enabled=true
+
 # Async Config
 async.corePoolSize=10
 async.maxPoolSize=50
