--- a/heystyles-usuarios-core/pom.xml
+++ b/heystyles-usuarios-core/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.heystyles</groupId>
+            <artifactId>seguridad-cliente</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Json Utils -->
         <dependency>
