--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.messages.basename=messages
 
 ## Data Source
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba_springboot?useSSL=false
+spring.datasource.username=pedrolop90
+spring.datasource.password=pedrolop90
+spring.datasource.url=jdbc:mysql://ec2-35-153-69-39.compute-1.amazonaws.com/prueba_springboot?useSSL=false
 
 ## JPA
 spring.jpa.generate-ddl=false
