nueva funcionalidad de persona por numero de documento...

--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -27,7 +27,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # URLs Micro Servicios
-client.seguridadUrlBase=http://localhost:9000/seguridad
+client.seguridadUrlBase=http://ec2-35-153-69-39.compute-1.amazonaws.com:9000/seguridad
 client.connectionTimeout=30000
 client.readTimeoutClientProperties=30000
 
