--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.messages.basename=messages
 
 ## Data Source
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=sql10313783
-spring.datasource.password=geGeursV7U
-spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10313783?useSSL=false
+spring.datasource.username=pedrolop90
+spring.datasource.password=pedrolop90
+spring.datasource.url=jdbc:mysql://ec2-54-196-82-212.compute-1.amazonaws.com:3306/prueba_springboot?useSSL=false
 
 ## JPA
 spring.jpa.generate-ddl=false
@@ -27,6 +27,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # URLs Micro Servicios
+client.seguridadUrlBase=http://ec2-3-84-146-56.compute-1.amazonaws.com:9000/seguridad
 client.seguridadUrlBase=http://localhost:9000/seguridad
 client.connectionTimeout=30000
 client.readTimeoutClientProperties=30000
@@ -38,3 +39,4 @@ audit.enabled=true
 async.corePoolSize=10
 async.maxPoolSize=50
 async.queueCapacity=20
+
