cliente de file.

--- a/heystyles-usuarios-api/src/main/resources/application.properties
+++ b/heystyles-usuarios-api/src/main/resources/application.properties
@@ -28,6 +28,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # URLs Micro Servicios
 client.seguridadUrlBase=http://ec2-54-196-82-212.compute-1.amazonaws.com:9000/seguridad
+client.fileUrlBase=http://ec2-54-196-82-212.compute-1.amazonaws.com:9050/file
 client.connectionTimeout=30000
 client.readTimeoutClientProperties=30000
 
