--- a/heystyles-usuarios-api/pom.xml
+++ b/heystyles-usuarios-api/pom.xml
@@ -38,6 +38,16 @@
             <artifactId>seguridad-cliente</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.heystyles</groupId>
+            <artifactId>file-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.heystyles</groupId>
+            <artifactId>file-cliente</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Spring WEB -->
         <dependency>
