--- a/heystyles-usuarios-core/pom.xml
+++ b/heystyles-usuarios-core/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>seguridad-cliente</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.heystyles</groupId>
+            <artifactId>file-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Json Utils -->
         <dependency>
